--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>01-maven-web-app</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>01-maven-web-app Maven Webapp</name>
+  <name>01-maven-web-app Maven Webapps</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
